[gd_scene load_steps=12 format=3 uid="uid://c7oxum2xnk1b5"]

[ext_resource type="Script" path="res://scripts/outro.gd" id="1_m2jlw"]
[ext_resource type="PackedScene" uid="uid://cag72fnh16vms" path="res://scenes/decorations/cake.tscn" id="2_wvu83"]
[ext_resource type="PackedScene" uid="uid://cloe5r5cuahpg" path="res://scenes/decorations/3cans.tscn" id="3_onoyw"]
[ext_resource type="PackedScene" uid="uid://dx43s2me8yoa4" path="res://scenes/decorations/toob.tscn" id="3_wbd8d"]
[ext_resource type="Texture2D" uid="uid://yw3prt4vvwnu" path="res://Assets/discountdan.png" id="5_6gmc0"]
[ext_resource type="PackedScene" uid="uid://bw636afcvveo5" path="res://scenes/transitions/transitionController.tscn" id="6_hn24p"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f6icr"]
albedo_color = Color(0, 0, 0, 1)
metallic_specular = 0.0

[sub_resource type="PlaneMesh" id="PlaneMesh_ssfp4"]
material = SubResource("StandardMaterial3D_f6icr")

[sub_resource type="Animation" id="Animation_8yhjx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasGroup/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasGroup/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_uvdg2"]
resource_name = "fade"
length = 3.0
step = 0.01
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2.98),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"changeScene"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasGroup/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasGroup/ColorRect:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.11, 2.99),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_660w8"]
_data = {
"RESET": SubResource("Animation_8yhjx"),
"fade": SubResource("Animation_uvdg2")
}

[node name="Control" type="Control" node_paths=PackedStringArray("slide1", "slide2", "slide3", "slide4", "animat", "tController")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m2jlw")
slide1 = NodePath("slide1")
slide2 = NodePath("slide2")
slide3 = NodePath("slide3")
slide4 = NodePath("SLIDE4")
animat = NodePath("AnimationPlayer")
tController = NodePath("Control")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1.255, 0, 0, 0, -5.48578e-08, -1.255, 0, 1.255, -5.48578e-08, 0, 0, -0.270087)
mesh = SubResource("PlaneMesh_ssfp4")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.56303)
projection = 1
size = 1.21557

[node name="SpotLight3D" type="SpotLight3D" parent="Camera3D"]
light_energy = 1.697
spot_range = 37.683

[node name="slide1" type="BoxContainer" parent="."]
layout_mode = 0
offset_right = 1149.0
offset_bottom = 650.0

[node name="VBOX1" type="VBoxContainer" parent="slide1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="slide1/VBOX1"]
layout_mode = 2
text = "
GOOD JOB AUXHOLE!"
horizontal_alignment = 1

[node name="Button" type="Button" parent="slide1/VBOX1"]
layout_mode = 2
size_flags_horizontal = 4
text = "CONTINUE"

[node name="HBoxContainer" type="HBoxContainer" parent="slide1/VBOX1"]
layout_mode = 2

[node name="toob" parent="." instance=ExtResource("3_wbd8d")]
transform = Transform3D(0.0487222, 0.181836, 0, -0.181836, 0.0487222, 0, 0, 0, 0.18825, -0.069025, -0.232175, 0.05522)

[node name="cans" parent="." instance=ExtResource("3_onoyw")]
transform = Transform3D(0.31375, 0, 0, 0, 0.31375, 0, 0, 0, 0.31375, -0.81575, -0.420425, 0.261885)

[node name="cake" parent="." instance=ExtResource("2_wvu83")]
transform = Transform3D(0.31375, -8.88178e-16, 1.16415e-10, 0, 0.31375, -6.15064e-14, -1.16415e-10, 6.08402e-14, 0.31375, 0.709075, -0.483175, -2.23517e-08)

[node name="slide2" type="BoxContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 1151.0
offset_bottom = 647.0

[node name="VBOX2" type="VBoxContainer" parent="slide2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="slide2/VBOX2"]
layout_mode = 2
text = "
YOU COLLECTED EVERYTHING!"
horizontal_alignment = 1

[node name="Button2" type="Button" parent="slide2/VBOX2"]
layout_mode = 2
size_flags_horizontal = 4
text = "CONTINUE"

[node name="slide3" type="BoxContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 1153.0
offset_bottom = 647.0

[node name="BoxContainer" type="VBoxContainer" parent="slide3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="slide3/BoxContainer"]
layout_mode = 2
text = "
YOU CAN GO NOW, YOUR \"CHECK\" IS IN THE \"MAIL\" AND WILL GET TO YOU \"SOON\""
horizontal_alignment = 1

[node name="Button3" type="Button" parent="slide3/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "LEAVE"

[node name="SLIDE4" type="BoxContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 1150.0
offset_bottom = 650.0

[node name="BoxContainer" type="VBoxContainer" parent="SLIDE4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="SLIDE4/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "
NOW THAT I HAVE EVERYTHING I NEED, I CAN START MY NEW \"DISCOUNT DAN'S EXTORSHION EMPORIUMâ„¢\"
I'LL GET MONEY FROM THE BPL, CARGONIA, THE INNER SPHERE (NOT THE CAPELLANS THOUGH), THE PERIPHERY, COMSTAR, AND THE AUX!
I'LL TAKE THEIR MONEY, GUARANTEED!"
horizontal_alignment = 1

[node name="Button4" type="Button" parent="SLIDE4/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "DONE"

[node name="Sprite2D" type="Sprite2D" parent="SLIDE4/BoxContainer"]
position = Vector2(584, 412)
scale = Vector2(0.476118, 0.476118)
texture = ExtResource("5_6gmc0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_660w8")
}

[node name="CanvasGroup" type="CanvasGroup" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasGroup"]
visible = false
offset_left = -13.0
offset_top = -5.0
offset_right = 1169.0
offset_bottom = 658.0
color = Color(0, 0, 0, 0)

[node name="Control" parent="." instance=ExtResource("6_hn24p")]
layout_mode = 1

[connection signal="pressed" from="slide1/VBOX1/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="slide2/VBOX2/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="slide3/BoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="SLIDE4/BoxContainer/Button4" to="." method="_on_button_4_pressed"]
